[package]
name = "servo-media-gstreamer-render-uwp"
version = "0.1.0"
authors = ["The Servo Project Developers"]

[features]
gl-egl = ["gstreamer-gl/egl"]

[lib]
name = "servo_media_gstreamer_render_uwp"
path = "lib.rs"

[dependencies.glib]
version = "0.9"

[dependencies.gstreamer]
version = "0.15"

[dependencies.gstreamer-gl]
version = "0.15"

[dependencies.gstreamer-video]
version = "0.15"

[dependencies.servo-media-player]
path = "../../../player"

[dependencies.servo-media-gstreamer-render]
path = "../render"
